# computer-windows-use

./: README.md  main.py  pyproject.toml  requirements.txt
config/: __init__.py  constants.py  logging.py  settings.py
core/: __init__.py  base_tool.py  exceptions.py  overlay.py  result.py  security.py
mcp_server/: __init__.py  prompts.py  resources.py  server.py  tool_registry.py
schemas/: __init__.py  keyboard.py  mouse.py  screen.py  system.py  window.py
services/: __init__.py  keyboard_service.py  mouse_service.py  screen_service.py  system_service.py  window_service.py
tests/: __init__.py
tools/: __init__.py
tools/keyboard/: __init__.py  driver.py  human_text_driver.py  pynput_driver.py  tool.py
tools/mouse/: __init__.py  driver.py  human_mouse_driver.py  pynput_driver.py  tool.py
tools/screen/: __init__.py  monitor.py  screenshot.py  tool.py
tools/system/: __init__.py  info.py  process.py  tool.py
tools/window/: __init__.py  focus.py  manager.py  tool.py
